src/objects/Activation__c.object
<CustomObject>
    <fields>
        <fullName>ActivationCode__c</fullName>
        <label>ActivationCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivationId__c</fullName>
        <label>ActivationId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivationTypeId__c</fullName>
        <label>ActivationTypeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivationXml__c</fullName>
        <label>ActivationXml</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Server Installation status</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalEmail__c</fullName>
        <label>AdditionalEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CDKey__c</fullName>
        <description>CD Key for this activation</description>
        <label>CDKey</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Combination_Key__c</fullName>
        <description>Unique Combination Key</description>
        <externalId>true</externalId>
        <label>Combination Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <label>ContractId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <label>CreateDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreateLogin__c</fullName>
        <label>CreateLogin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateUserName__c</fullName>
        <label>CreateUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateUser__c</fullName>
        <label>CreateUser</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeactivationCode__c</fullName>
        <label>DeactivationCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeactivationId__c</fullName>
        <description>Deactivation id</description>
        <label>DeactivationId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeactivationTypeId__c</fullName>
        <label>DeactivationTypeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IP_Addr__c</fullName>
        <label>IP_Addr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastChangeDescription__c</fullName>
        <label>LastChangeDescription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastChangeTypeId__c</fullName>
        <label>LastChangeTypeId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Key</label>
        <referenceTo>Product_Key__c</referenceTo>
        <relationshipLabel>Activation</relationshipLabel>
        <relationshipName>Activation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegistrationId__c</fullName>
        <label>RegistrationId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <label>Site_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeDescription__c</fullName>
        <description>Activation/Deactivation type description</description>
        <label>TypeDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XMLVersionNumber__c</fullName>
        <label>XMLVersionNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Activation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Key__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Activation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>